--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -47,7 +47,9 @@
         <header class="header">
             <div class="header-container">
                 <div class="logo-container">
-                    <img src="/images/Logo.png" alt="Wittle Guys" class="logo">
+                    <a href="/">
+                        <img src="/images/Logo.png" alt="Wittle Guys" class="logo">
+                    </a>
                 </div>
                 <div class="cart-container">
                     <a href="javascript:void(0);" class="cart-link" onclick="showCartDrawer()">
