Fix: nuances -- trademarks etc 1.0

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -129,11 +129,11 @@
                     <img src="/images/cards/SVGs/applepay.svg" alt="Apple Pay" class="card-icon">
                     <img src="/images/cards/SVGs/googlepay.svg" alt="Google Pay" class="card-icon">
                 </div>
-                <div class="footer-branding">Branding &amp; Website by Logan Miller</div>
+                <div class="footer-branding" style="color: #000;">Branding &amp; Website by <a href="https://github.com/norselord" style="color: #0074d9; text-decoration: underline;" target="_blank" rel="noopener">Logan Miller</a></div>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; {{ now.Year }} Wittle Guys. All rights reserved.</p>
+            <p style="color: #000;">&copy; 2025 wittleguys. All Wites Weserved. (All Rights Reserved.)</p>
         </div>
     </footer>
 
